# dev-environment

./: .gitignore  Brewfile  README.md  bootstrap.sh
claude/: CLAUDE.md  settings.json  settings.local.json  statusline-command.sh
claude/guardrails/: config.toml
claude/guardrails/patterns/: allow.txt  block.txt  secrets.txt
docs/plans/: 2026-04-02-fleet-up-design.md  2026-04-02-fleet-up-implementation.md  2026-04-03-mcp-proxy-mux-design.md
fleet-up/: __main__.py  aerospace_config.py  config.toml  fleet_up.py
fleet-up/tests/: test_aerospace.py  test_config.py  test_integration.py
launchd/: com.cass.index-watch.plist  com.cass.semantic-reindex.plist  com.claude-speak.daemon.plist  com.mcp-proxy-mux.daemon.plist
mcp-proxy/: config.toml  pyproject.toml
mcp-proxy/mcp_proxy/: __init__.py  __main__.py  backend.py  cli.py  config.py  server.py
mcp-proxy/tests/: smoke_test.py  test_backend.py  test_config.py  test_real_server.py  test_server.py
playbooks/: README.md  cass.md  claude-speak.md  multiagent-review.md  prose-polish-redline.md  read-aloud.md  research-to-presentation.md  research-to-video.md  sand-table.md  sandbox.md  skills-overview.md
shell/: ai-tools.zsh
