[project]
name = "mcp-proxy-mux"
version = "0.1.0"
description = "Multiplexing proxy: wraps stdio MCP servers as shared HTTP endpoints"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
mcp-proxy-mux = "mcp_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aiohttp>=3.9"]
